Bug 1551174 - Inactive CSS - visual polish r=pbro
Depends on: D31986

### Summary

- [X] Extra margin between paragraphs (about 14px, or whatever 1em is)
- [X] Same amount of padding on all sides - match left spacing. Looks like we need 4px less on the side with the arrow, 2px less on the other side.
- [X] Fully opaque, white-colored background
- [X] Drop shadow should be half as dark (I think this is the MacOS doubled dropshadow issue - it should match the meatball menu's shadow)
- [X] Less space between ending icons and CSS - seems like we can just remove margin-inline-start: 5px
- [X] I think florens may have a better info icon that will be more legible at this small size
      !!I just created a new one!!
- [X] Warning icon should be smaller now to match the size of the info icon :)
      It was an illusion but I have made it slightly smaller and changed the background position to make it look closer to the same size.
- [X] Seems like it would be helpful if you could select the tooltip text

- Whole tooltip 1px to the right and 2px lower !!I have moved this out to bug 1552146!!

Differential Revision: https://phabricator.services.mozilla.com/D31292

UltraBlame original commit: 9580f1df7a53b17cbda444f9d2809aeb63912743

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -1921,6 +1921,18 @@ height
 ;
 background
 -
+size
+:
+cover
+;
+}
+.
+ruleview
+-
+warning
+{
+background
+-
 image
 :
 url
@@ -1942,9 +1954,14 @@ svg
 ;
 background
 -
-size
+position
 :
-cover
+0
+.
+73px
+0
+.
+4px
 ;
 -
 moz
