--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -698,12 +698,49 @@ color
 ;
 padding
 :
+5px
 7px
-10px
 ;
 margin
 :
 0
+;
+}
+.
+devtools
+-
+tooltip
+-
+inactive
+-
+css
+.
+devtools
+-
+tooltip
+-
+inactive
+-
+css
+strong
+{
+-
+moz
+-
+user
+-
+select
+:
+text
+;
+-
+moz
+-
+user
+-
+focus
+:
+normal
 ;
 }
 .
@@ -724,6 +761,29 @@ start
 :
 0
 ;
+margin
+-
+block
+-
+end
+:
+1em
+;
+}
+.
+devtools
+-
+tooltip
+-
+inactive
+-
+css
+p
+:
+last
+-
+child
+{
 margin
 -
 block
@@ -860,10 +920,6 @@ z
 index
 :
 9999
-;
-display
-:
-none
 ;
 background
 :
@@ -2058,7 +2114,7 @@ padding
 -
 bottom
 :
-6px
+2px
 ;
 }
 .
